♡ fix socials and other links
♡ new ship on ao3

--- a/web/index.html
+++ b/web/index.html
@@ -113,7 +113,7 @@ x o x o katy ♡
       <div id="content">
         <h1>hi there :)</h1>
         <p>hi. i had a website. now i'm making a different one. bare with me as i wrangle cats and get distracted by shiny things. :)</p>
-        <p>in the meantime, visit my <a href="https://twitter.com/katiewritescode">twitter</a>, <a href="https://www.instagram.com/katiewritescode">instagram</a>, and <a href="https://www.goodreads.com/user/show/22253218-katy-elizabeth">goodreads</a> or <a href="https://archiveofourown.org/tags/Femslash%20February/works">read some stories</a>?</p>
+        <p>in the meantime, visit my <a href="https://twitter.com/cupcakezealot">twitter</a>, <a href="https://www.instagram.com/cupcakezealot">instagram</a>, and <a href="https://www.goodreads.com/user/show/133391434-katherine">goodreads</a> or <a href="https://archiveofourown.org/tags/Laudna*s*Imogen%20Temult/works">read some stories</a>?</p>
         <p class="signature">xoxo katy <i class="fas fa-heart"></i></p>
       </div>
     </div>
